Improve dynamic contrast to fix text on bg-success

--- a/application/resources/assets/sass/_variables.scss
+++ b/application/resources/assets/sass/_variables.scss
@@ -1,5 +1,6 @@
 // Configuration
 $enable-shadows: true;
+$yiq-contrasted-threshold: 160;
 
 // Radii
 $input-border-radius: 0;
